TDM-79 fix tests