@@ -4,6 +4,7 @@ import com.persoff68.fatodo.FatodoChatServiceApplication;
 import com.persoff68.fatodo.client.UserServiceClient;
 import com.persoff68.fatodo.client.WsServiceClient;
 import com.persoff68.fatodo.model.Chat;
+import com.persoff68.fatodo.model.MemberEvent;
 import com.persoff68.fatodo.model.Message;
 import com.persoff68.fatodo.repository.ChatRepository;
 import com.persoff68.fatodo.repository.MemberEventRepository;
@@ -17,9 +18,9 @@ import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.setup.MockMvcBuilders;
-import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.context.WebApplicationContext;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.UUID;
 
@@ -35,6 +36,8 @@ public class MessageServicesIT {
     private static final UUID USER_1_ID = UUID.fromString("98a4f736-70c2-4c7d-b75b-f7a5ae7bbe8d");
     private static final UUID USER_2_ID = UUID.fromString("8d583dfd-acfb-4481-80e6-0b46170e2a18");
     private static final UUID USER_3_ID = UUID.fromString("5b8bfe7e-7651-4d39-a70c-22c997e376b1");
+
+    private static final int TIMEOUT = 30;
 
     private static final Pageable pageable = PageRequest.of(0, 100);
 
@@ -79,48 +82,40 @@ public class MessageServicesIT {
         // create chats
         firstChat = chatService.createDirect(USER_1_ID, USER_2_ID);
         secondChat = chatService.createIndirect(USER_1_ID, List.of(USER_2_ID, USER_3_ID));
+        sleep(TIMEOUT);
 
         // init with messages
-        for (int i = 0; i < 5; i++) {
-            messageService.send(USER_1_ID, firstChat.getId(), UUID.randomUUID().toString(), null);
-        }
-        for (int i = 0; i < 5; i++) {
-            messageService.send(USER_1_ID, secondChat.getId(), UUID.randomUUID().toString(), null);
-        }
+        messageService.send(USER_1_ID, firstChat.getId(), UUID.randomUUID().toString(), null);
+        messageService.send(USER_1_ID, secondChat.getId(), UUID.randomUUID().toString(), null);
+        sleep(TIMEOUT);
     }
 
     @Test
-    @Transactional
     public void getAllMessagesTest() {
         List<Message> firstUserFirstChatMessageList = messageService
                 .getAllByUserIdAndChatId(USER_1_ID, firstChat.getId(), pageable);
         List<Message> firstUserSecondChatMessageList = messageService
                 .getAllByUserIdAndChatId(USER_1_ID, secondChat.getId(), pageable);
 
-        assertThat(firstUserFirstChatMessageList.size()).isEqualTo(5);
-        assertThat(firstUserSecondChatMessageList.size()).isEqualTo(5);
+        assertThat(firstUserFirstChatMessageList.size()).isEqualTo(2);
+        assertThat(firstUserSecondChatMessageList.size()).isEqualTo(2);
     }
 
     private void beforeLeaveAndGetAllMessagesTest() {
         // leave second chat
         memberEventService.leaveChat(USER_1_ID, secondChat.getId());
-
-        // messages to second chat
-        for (int i = 0; i < 5; i++) {
-            messageService.send(USER_2_ID, secondChat.getId(), UUID.randomUUID().toString(), null);
-        }
-
+        sleep(TIMEOUT);
+        // message to second chat
+        messageService.send(USER_2_ID, secondChat.getId(), UUID.randomUUID().toString(), null);
+        sleep(TIMEOUT);
         // enter second chat
-        memberEventService.addUsersUnsafe(secondChat.getId(), List.of(USER_1_ID));
-
-        // messages to second chat
-        for (int i = 0; i < 5; i++) {
-            messageService.send(USER_1_ID, secondChat.getId(), UUID.randomUUID().toString(), null);
-        }
+        memberEventService.addUsers(USER_2_ID, secondChat.getId(), Collections.singletonList(USER_1_ID));
+        sleep(TIMEOUT);
+        // message to second chat
+        messageService.send(USER_1_ID, secondChat.getId(), UUID.randomUUID().toString(), null);
     }
 
     @Test
-    @Transactional
     public void leaveAndGetAllMessagesTest() {
         beforeLeaveAndGetAllMessagesTest();
 
@@ -129,8 +124,11 @@ public class MessageServicesIT {
         List<Message> secondUserSecondChatMessageList = messageService
                 .getAllByUserIdAndChatId(USER_2_ID, secondChat.getId(), pageable);
 
-        assertThat(firstUserSecondChatMessageList.size()).isEqualTo(10);
-        assertThat(secondUserSecondChatMessageList.size()).isEqualTo(15);
+        List<MemberEvent> memberEventList = memberEventRepository.findAll();
+        List<Message> messageList = messageRepository.findAll();
+
+        assertThat(firstUserSecondChatMessageList.size()).isEqualTo(5);
+        assertThat(secondUserSecondChatMessageList.size()).isEqualTo(6);
     }
 
     private void beforeClearAndGetAllMessagesTest() {
@@ -138,13 +136,10 @@ public class MessageServicesIT {
         memberEventService.clearChat(USER_1_ID, secondChat.getId());
 
         // messages to second chat
-        for (int i = 0; i < 5; i++) {
-            messageService.send(USER_2_ID, secondChat.getId(), UUID.randomUUID().toString(), null);
-        }
+        messageService.send(USER_2_ID, secondChat.getId(), UUID.randomUUID().toString(), null);
     }
 
     @Test
-    @Transactional
     public void clearAndGetAllMessagesTest() {
         beforeClearAndGetAllMessagesTest();
 
@@ -153,8 +148,16 @@ public class MessageServicesIT {
         List<Message> secondUserSecondChatMessageList = messageService
                 .getAllByUserIdAndChatId(USER_2_ID, secondChat.getId(), pageable);
 
-        assertThat(firstUserSecondChatMessageList.size()).isEqualTo(5);
-        assertThat(secondUserSecondChatMessageList.size()).isEqualTo(10);
+        assertThat(firstUserSecondChatMessageList.size()).isEqualTo(1);
+        assertThat(secondUserSecondChatMessageList.size()).isEqualTo(3);
+    }
+
+    private void sleep(int ms) {
+        try {
+            Thread.sleep(ms);
+        } catch (InterruptedException e) {
+            // skip
+        }
     }
 
 }
